--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "express": "^4.18.2",
-    "pg": "^8.11.3"
+    "path": "^0.12.7",
+    "pg": "^8.11.3",
+    "react-DOM": "npm:react-dom@^18.2.0"
   }
 }
